feat: max tool calls
